--- a/exampleSite/config/_default/languages.toml
+++ b/exampleSite/config/_default/languages.toml
@@ -1,6 +1,6 @@
-[de]
+[es]
 contentDir = "content/espanol"
-copyright = "Diseño de [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
+copyright = "Diseño de [Themefisher](https://themefisher.com/) desarrollado por [Gethugothemes](https://gethugothemes.com/)"
 footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
 footer_menu_left = "Empresa"
 footer_menu_middle = "Servicios"
@@ -13,7 +13,7 @@ contentDir = "content/english"
 copyright = "Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
 footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
 footer_menu_left = "Company"
-footer_menu_middle = "Product"
+footer_menu_middle = "Servicios"
 footer_menu_right = "Support"
 languageName = "En"
 title = "Bigspring Hugo"
