--- a/exampleSite/config/_default/languages.toml
+++ b/exampleSite/config/_default/languages.toml
@@ -13,7 +13,7 @@ contentDir = "content/english"
 copyright = "Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
 footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
 footer_menu_left = "Company"
-footer_menu_middle = "Servicios"
+footer_menu_middle = "Services"
 footer_menu_right = "Support"
 languageName = "En"
 title = "Bigspring Hugo"
